# frisk

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: apps.rs  args.rs  cache.rs  calculator.rs  cli.rs  clipboard.rs  commands.rs  config.rs  crates.rs  element.rs  error.rs  gui.rs  homebrew.rs  instance.rs  ipc.rs  loader.rs  log.rs  main.rs  nixpkgs.rs
src/core/: calculator.rs  commands.rs  config.rs  element.rs  error.rs  mod.rs
src/daemon/: apps.rs  clipboard.rs  homebrew.rs  mod.rs  nixpkgs.rs
src/daemons/: apps.rs  clipboard.rs  homebrew.rs  mod.rs  nixpkgs.rs
src/gui/: mod.rs  rendering.rs  state.rs  view.rs  window.rs
src/picker/: mod.rs  rendering.rs  state.rs  view.rs  window.rs
src/service/: mod.rs
src/services/: apps.rs  clipboard.rs  dictionary.rs  mod.rs  nixpkgs.rs
