[package]
name = "kickoff-darwin"
version = "0.1.0"
authors = ["Cal Richards acc@calrichards.io"]
edition = "2021"
description = "Fast and minimal program launcher for macOS"
license = "GPL-3.0-or-later"
keywords = ["macos", "launcher", "spotlight", "application-launcher"]
rust-version = "1.77"

[[bin]]
name = "kickoff"
path = "src/main.rs"

[dependencies]
nucleo = "0.5"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
bincode = "1.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry"] }
objc2-app-kit = { version = "0.3", features = [
  "NSApplication",
  "NSWindow",
  "NSView",
  "NSColor",
  "NSFont",
  "NSEvent",
  "NSBezierPath",
  "NSScreen",
  "NSPasteboard",
] }
objc2-quartz-core = { version = "0.3", features = ["CALayer"] }
numbat = "1.16.0"

[profile.release]
lto = true
debug = true
