[package]
name = "kickoff-darwin"
version = "0.1.0"
authors = ["caligula acc@calrichards.io"]
edition = "2021"
description = "Fast and minimal program launcher for macOS"
license = "GPL-3.0-or-later"
keywords = ["macos", "launcher", "spotlight", "application-launcher"]
rust-version = "1.77"

[[bin]]
name = "kickoff"
path = "src/main.rs"

[dependencies]
nucleo = "0.5"
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
bincode = "2.0.1"
anyhow = "1.0.100"
log = "0.4.28"
env_logger = "0.11.8"
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSGeometry"] }
objc2-app-kit = { version = "0.3.2", features = [
  "NSApplication",
  "NSWindow",
  "NSView",
  "NSColor",
  "NSFont",
  "NSEvent",
  "NSBezierPath",
  "NSScreen",
  "NSPasteboard",
] }
objc2-quartz-core = { version = "0.3.2", features = ["CALayer"] }
meval = "0.2"

# [profile.release]
# lto = true
# debug = true
