[package]
name = "kickoff-darwin"
version = "0.1.0"
authors = ["caligula acc@calrichards.io"]
edition = "2021"
description = "Fast and minimal program launcher for macOS"
license = "GPL-3.0-or-later"
keywords = ["macos", "launcher", "spotlight", "application-launcher"]
rust-version = "1.77"

[[bin]]
name = "kickoff"
path = "src/main.rs"

[dependencies]
nucleo-matcher = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
bincode = "2.0.1"
anyhow = "1.0.100"
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSGeometry"] }
objc2-app-kit = { version = "0.3.2", features = [
  "NSApplication",
  "NSWindow",
  "NSView",
  "NSColor",
  "NSFont",
  "NSEvent",
  "NSBezierPath",
  "NSScreen",
  "NSPasteboard",
] }
objc2-quartz-core = { version = "0.3.2", features = ["CALayer"] }
evalexpr = "13.0"

[profile.release]
lto = true
opt-level = "z"     # Optimize for size
strip = true        # Strip symbols
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary

